# GBRust

./: .gitignore  Cargo.toml  readme.md
src/: bus.rs  cpu.rs  gameboy.rs  gbdisassembler.rs  gui.rs  main.rs  memory.rs
src/cpu/: bit_macros.rs  instructions_0.rs  instructions_1.rs  instructions_2.rs  instructions_3.rs  instructions_4.rs  instructions_5.rs  instructions_6.rs  instructions_7.rs  instructions_8.rs  instructions_9.rs  instructions_a.rs  instructions_b.rs  instructions_c.rs  registers.rs  test.rs  test_1.rs  test_4.rs  test_instructions.rs  test_instructions_0.rs  test_instructions_4.rs
src/gameboy/: test.rs
