[package]
name = "gbrust"
version = "0.1.0"
edition = "2021"
authors = ["Boris Burgarella"]
description = "a simple rusty gameboy emulator"
repository = "TODO"
readme = "README.md"
documentation = "TODO"
keywords = ["Emulation", "Gameboy"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
colored = "2"
serde_json = "1.0.81"
cgmath = "0.16.1"
gl = "0.10.0"
glfw = "0.23.0"
image = "0.23.12"
# only needed from chapter 3 on
tobj = "0.1.6"
num = "0.2.0"
rand = "0.5.5"

[build-dependencies]
colored = "2"
serde_json = "1.0.81"